editing_readme and adding auto-currency taker

--- a/calculator/pom.xml
+++ b/calculator/pom.xml
@@ -11,9 +11,16 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
+            <version>23.0.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.javamoney</groupId>
+            <artifactId>moneta</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
